# py3dst

./: .gitignore  README.md  __init__.py  pyproject.toml  tex3dst.py
src/py3dst/: __init__.py  __main__.py  error_classes.py  errors.py  primitive_types.py  tex3dst.py  utils.py
